--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,7 +47,6 @@ dependencies {
     // mvvm
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
-
     implementation "androidx.fragment:fragment-ktx:1.3.6"
 
     // navigation
@@ -56,7 +55,6 @@ dependencies {
 
     // room
     implementation "androidx.room:room-runtime:2.3.0"
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     kapt "androidx.room:room-compiler:2.3.0"
     implementation "androidx.room:room-ktx:2.3.0"
 
@@ -66,6 +64,16 @@ dependencies {
     // retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
+    implementation 'com.squareup.okhttp3:okhttp:4.9.1'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.1'
 
-    implementation("androidx.datastore:datastore-preferences:1.0.0")
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.5.30"
+
+    // koin
+    implementation "org.koin:koin-androidx-scope:2.2.0-alpha-1"
+    implementation "org.koin:koin-androidx-viewmodel:2.2.0-alpha-1"
+    implementation "org.koin:koin-androidx-fragment:2.2.0-alpha-1"
+
+    // ring progress bar
+    implementation 'com.ramijemli.percentagechartview:percentagechartview:0.3.1'
 }
